<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="changycj.anemiascan.SignInFragment" >

    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title_string"
        android:textSize="40sp"
        android:gravity="center_horizontal" 
        android:paddingTop="50sp"
        android:paddingBottom="50sp"/>
    <TextView 
        android:id="@+id/sign_in_enter_info" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_title"
        android:text="@string/sign_in_enter_info_string"
        android:gravity="center_horizontal"/>
    
    <EditText
        android:id="@+id/sign_in_patient_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sign_in_patient_id"
        android:layout_below="@id/sign_in_enter_info"
        android:hint="@string/sign_in_patient_name_string" />
    
    <EditText
        android:id="@+id/sign_in_patient_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_patient_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/sign_in_patient_id_string"
        android:inputType="number" />

    <Button
        android:id="@+id/sign_in_start_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_in_patient_id"
        android:layout_alignRight="@+id/sign_in_patient_id"
        android:layout_below="@+id/sign_in_patient_id"
        android:text="@string/sign_in_start_scan_string" />

    <Button
        android:id="@+id/sign_in_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_in_patient_id"
        android:layout_below="@+id/sign_in_start_scan"
        android:text="@string/sign_in_history_string" />

    <Button
        android:id="@+id/sign_in_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sign_in_start_scan"
        android:layout_below="@+id/sign_in_start_scan"
        android:layout_toRightOf="@+id/sign_in_history"
        android:text="@string/sign_in_instructions_string" />

</RelativeLayout>
