<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="changycj.anemiascan.ViewFileFragment" >
    
    <TextView 
        android:id="@+id/viewfile_patient_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewfile_patient_id_string" />
    
    <TextView 
        android:id="@+id/viewfile_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewfile_patient_id"
        android:text="@string/viewfile_patient_name_string" />
    
    <TextView 
        android:id="@+id/viewfile_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewfile_patient_name"
        android:text="@string/viewfile_date_string" />
    
    
    <TextView 
        android:id="@+id/viewfile_calibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewfile_date"
        android:text="@string/viewfile_calibration_string" />   
    
</RelativeLayout>
