<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Results" >
    
    <TextView
        android:id="@+id/result_measurement_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_measurement_label_string"
        android:textSize="25sp"
        android:padding="50sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />
    
    <TextView
        android:id="@+id/result_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_measurement_label"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:padding="30sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/result_diagnosis_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/result_diagnosis_label_string"
        android:textSize="25sp"
    	android:padding="50sp" />

    <TextView
        android:id="@+id/result_diagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_diagnosis_label"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" 
        android:padding="30sp"
        android:gravity="center"/>
    
    <Button 
    	android:id="@+id/result_main_menu"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/result_diagnosis"
    	android:text="@string/result_main_menu_string"
    	android:layout_centerHorizontal="true"/>
        
       
</RelativeLayout>
